# ffapi

./: .gitignore  build.nix  flake.nix  pyproject.toml  shell.nix
src/: main.py
src/database/: __init__.py
src/database/IRS990/: __init__.py  populate.sql  setup.sql  tables.sql
src/parser/: Form990.py  __init__.py
src/parser/IRS990/: __init__.py  mappings.json
src/router/: __init__.py
src/router/IRS990/: __init__.py
src/router/Upload/: __init__.py
src/router/Upload/views/: upload.html
src/server/: __init__.py
src/unzipper/: __init__.py
src/utils/: path.py
