[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffapi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
ffapi = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.html"]

[tool.setuptools.package-dir]
"" = "src"
